--- a/auav_pylon_2026/param/sim.yaml
+++ b/auav_pylon_2026/param/sim.yaml
@@ -33,11 +33,11 @@ trim_ail: 0.0
 mass: 0.057 # kg
 
 # --- Lateral Roll Control in Stabilized Sim mode---
-k_chi: 1.20                # [1/s] maps heading error -> desired heading rate
+k_chi: 1.23      # [1/s] maps heading error -> desired heading rate  (1.20 is default), 1.3 with the safer waypoints seems safer
 phi_lim_deg: 30.0         # bank limit
 phi_dot_lim_deg_s: 90.0   # optional slew on bank [deg/s]
 chi_deadband_deg: 1.0     # heading error deadband to fix oscillations [deg]
-K_phi_p: 3.0              # aileron per rad (P on roll error)
+K_phi_p: 3.2            # aileron per rad (P on roll error) 3.0 is default
 K_phi_i: 01.6              # aileron per rad·s (I on roll error)
 K_phi_d: 0.5              # aileron per (rad/s) (D on roll rate)
 i_phi_max: 0.63            # integral clamp (aileron units)
